--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="styles/stle.css">
+	<link rel="stylesheet" type="text/css" href="styles/style2.css">
 	<meta charset="utf8">
 	<title>Google</title>
 </head>
 
 <body>
-<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo" >
+	<div id="top_bar">
+	<ol>
+		<span>
+		<li><a href="https://mail.google.com/mail/?tab=wm">Gmail</a></li>
+		<li><a href="https://www.google.com/imghp?hl=en&tab=wi&ei=3DyAV7mKDYeoe5_7jdAE&ved=0EKouCBYoAQ">Images</a></li>
+		<li><a href="https://www.google.com/intl/en/options/">Settings</a></li>
+		<li><a href="#notifications">Notifications</a></li>
+		<li><a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/"><img src="https://lh3.googleusercontent.com/-RBfDJW41tkQ/AAAAAAAAAAI/AAAAAAAAAAA/AOtt-yF8wMSF6TZim-muFzaKwEo46TN2DA/s32-c-mo/photo.jpg"></a></li>
+		</span>
+	</ol>
+	</div>
+
+	<div id="logo">
+	<img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
+
+	<br>
+	<br>
+
+	<div id="input">
+	<form action="#" method="POST" name="Search">
+		<input type="test" name="">
+	</form>
+	</div>
+
+	<div id="buttons">
+		<input type="submit" name="search" value="Google Search" src="">
+		<input type="submit" name="lucky" value="I'm Feeling Lucky" src="">
+	</div>
+
+	<div id="bottom_bar">	
+	<ol>
+		<li class="left_foot"><a href="https://www.google.com/intl/en/ads/?fg=1">Advertising</a></li>
+		<li class="left_foot"><a href="https://www.google.com/services/?fg=1">Business</a></li>
+		<li class="left_foot"><a href="https://www.google.com/intl/en/about.html?fg=1">About</a></li>
+		<span>
+		<li><a href="https://www.google.com/intl/en/policies/privacy/?fg=1">Privacy</a></li>
+		<li><a href="https://www.google.com/intl/en/policies/terms/?fg=1">Terms</a></li>
+		<li><a href="https://www.google.com/preferences?hl=en">Settings</a></li>
+		</span>
+	</ol>
+	</div>
 
 
 
