--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<ol>
 		<span>
 		<li><a href="https://mail.google.com/mail/?tab=wm">Gmail</a></li>
-		<li><a href="https://www.google.com/imghp?hl=en&tab=wi&ei=3DyAV7mKDYeoe5_7jdAE&ved=0EKouCBYoAQ">Images</a></li>
+		<li><a href="https://www.google.com/imghp?hl=en&amp;tab=wi&amp;ei=3DyAV7mKDYeoe5_7jdAE&amp;ved=0EKouCBYoAQ">Images</a></li>
 		<li><a href="https://www.google.com/intl/en/options/">Settings</a></li>
 		<li><a href="#notifications">Notifications</a></li>
-		<li><a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/"><img src="https://lh3.googleusercontent.com/-RBfDJW41tkQ/AAAAAAAAAAI/AAAAAAAAAAA/AOtt-yF8wMSF6TZim-muFzaKwEo46TN2DA/s32-c-mo/photo.jpg"></a></li>
+		<li><a href="https://accounts.google.com/SignOutOptions?hl=en&amp;continue=https://www.google.com/"><img src="https://lh3.googleusercontent.com/-RBfDJW41tkQ/AAAAAAAAAAI/AAAAAAAAAAA/AOtt-yF8wMSF6TZim-muFzaKwEo46TN2DA/s32-c-mo/photo.jpg"></a></li>
 		</span>
 	</ol>
 	</div>
